updating index.html & adding images

--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -1,1 +1,131 @@
-<p>Jake Simon</p>
+
+<!DOCTYPE html>
+<html>
+	<head>
+
+		<title>Jake Simon - Brand Advocate</title>
+
+	</head>
+	<body>
+		<header>
+			<h1>Places I've lived</h1>
+			<nav>
+				<p>I LOVE talking about and sharing the stuff that I love. Below are my current Top 10 examples of products and services that I recommend to people. Honestly, it is a good way to find connections with people -- for example, finding out that someone else likes Apple products, or prefers Coke over Pepsi, or uses the same app makes an immediate connection!
+
+
+				<ul>
+					<li><a href="#panteras">Pantera's Pizza</a></li>
+					<li><a href="#newbalance">New Balance MR1 shoes</a></li>
+					<li><a href="#theflash">The Flash</a></li>
+					<li><a href="#apple">Apple</a></li>
+					<li><a href="#roadid">RoadID</a></li>
+					<li><a href="#momentum">App - Momentum</a></li>
+					<li><a href="#orion">Orion 4Sight Sunglasses</a></li>
+					<li><a href="#aeropress">Aeropress Cafe</a></li>
+					<li><a href="#mammachia">Mamma Chia</a></li>
+					<li><a href="#readyplayerone"><u>Ready Player One</u> by Ernest Cline</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<main>
+			<article>
+				<section>
+					<a name="panteras"></a>
+					<h2>Pantera's Pizza</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/panteraspizza.jpg" alt="Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me" />
+						<figcaption>Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="newbalance"></a>
+					<h2>New Balance MR1 shoes</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/nbmr1.jpg" alt="New Balance MR1 - minimalist shoes for barefoot runners" />
+						<figcaption>New Balance MR1 - minimalist shoes for barefoot runners</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="theflash"></a>
+					<h2>The Flash</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/theflash.jpg" alt="The Flash of not flash-in-the-pan fans" />
+						<figcaption>The Flash of not flash-in-the-pan fans</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="apple"></a>
+					<h2>Apple</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/appleproducts.jpg" alt="Apple products I use every damn day MacBook Pro Retina, iPhone 6s, iPad, Apple TV, Apple Watch (coming soon)" />
+						<figcaption>Apple products I use every damn day MacBook Pro Retina, iPhone 6s, iPad, Apple TV, Apple Watch (coming soon)</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="roadid"></a>
+					<h2>RoadID</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/roadid.jpg" alt="Road ID - It's Who I Am" />
+						<figcaption>Road ID - It's Who I Am</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="momentum"></a>
+					<h2>App - Momentum (iOS & OSX)</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/momentum-app.jpg" alt="Momentum for building sustainable habits" />
+						<figcaption>Momentum for building sustainable habits</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="orion"></a>
+					<h2>Orion 4Sight Sunglasses</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/orion.jpg" alt="Orion 4 Sight sunglasses - for sport and everyday activities" />
+						<figcaption>Orion 4 Sight sunglasses - for sport and everyday activities</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="aeropress"></a>
+					<h2>Aeropress Cafe</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/aeropress.jpg" alt="Aeropress - the people who brought you amazing flying discs bring you amazing espresso drinks. What?!" />
+						<figcaption>Aeropress - the people who brought you amazing flying discs bring you amazing espresso drinks. What?!</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="mammachia"></a>
+					<h2>Mamma Chia</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/mammachia.jpg" alt="Mamma Chia - delicious & nutritious" />
+						<figcaption>Mamma Chia - delicious & nutritious</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="readyplayerone"></a>
+					<h2><u>Ready Player One</u> by Ernest Cline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<figure>
+						<img src="images/readyplayerone.jpg" alt="Ready Player One - a book that got a 40-something guy into reading again" />
+						<figcaption>Ready Player One - a book that got a 40-something guy into reading again</figcaption>
+					</figure>
+				</section>
+			</article>
+		</main>
+
+		<footer>
+			<p>Built for LaunchCode's Summer of Code Unit 2</p>
+			<p>&copy; 2015 Jake Simon</p>
+		</footer>
+	</body>
+</html>
