--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -89,7 +89,7 @@
 					<h2>Orion 4Sight Sunglasses</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
 					<figure>
-						<img src="images/orion.jpg" alt="Orion 4 Sight sunglasses - for sport and everyday activities" />
+						<img src="images/orion4sight.jpg" alt="Orion 4 Sight sunglasses - for sport and everyday activities" />
 						<figcaption>Orion 4 Sight sunglasses - for sport and everyday activities</figcaption>
 					</figure>
 				</section>
