--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Places I've lived</h1>
+			<h1>Currently Fixated</h1>
 			<nav>
 				<p>I LOVE talking about and sharing the stuff that I love. Below are my current Top 10 examples of products and services that I recommend to people. Honestly, it is a good way to find connections with people -- for example, finding out that someone else likes Apple products, or prefers Coke over Pepsi, or uses the same app makes an immediate connection!
 
@@ -71,7 +71,7 @@
 					<h2>RoadID</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
 					<figure>
-						<img src="images/roadid.jpg" alt="Road ID - It's Who I Am" />
+						<img src="images/roadid.png" alt="Road ID - It's Who I Am" />
 						<figcaption>Road ID - It's Who I Am</figcaption>
 					</figure>
 				</section>
