added CSS styles with basic normalize styling

--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -4,11 +4,11 @@
 	<head>
 
 		<title>Jake Simon - Brand Advocate</title>
-
+		<link type = "text/css" rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<header>
-			<h1>Currently Fixated</h1>
+			<h1 id="title">Currently Fixated</h1>
 			<nav>
 				<p>I LOVE talking about and sharing the stuff that I love. Below are my current Top 10 examples of products and services that I recommend to people. Honestly, it is a good way to find connections with people -- for example, finding out that someone else likes Apple products, or prefers Coke over Pepsi, or uses the same app makes an immediate connection!
 
@@ -33,7 +33,7 @@
 				<section>
 					<a name="panteras"></a>
 					<h2>Pantera's Pizza</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<p class ="badcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
 					<figure>
 						<img src="images/panteraspizza.jpg" alt="Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me" />
 						<figcaption>Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me</figcaption>
