--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -4,7 +4,9 @@
 	<head>
 
 		<title>Jake Simon - Brand Advocate</title>
+		<link type = "text/css" rel="stylesheet" href="normalize.css" />
 		<link type = "text/css" rel="stylesheet" href="styles.css" />
+
 	</head>
 	<body>
 		<header>
