changing .css to rounded rectangles and large images

--- a/submissions/jakers19/index.html
+++ b/submissions/jakers19/index.html
@@ -19,13 +19,13 @@
 					<li><a href="#panteras">Pantera's Pizza</a></li>
 					<li><a href="#newbalance">New Balance MR1 shoes</a></li>
 					<li><a href="#theflash">The Flash</a></li>
-					<li><a href="#apple">Apple</a></li>
+					<li><a href="#apple">Apple Products</a></li>
 					<li><a href="#roadid">RoadID</a></li>
 					<li><a href="#momentum">App - Momentum</a></li>
 					<li><a href="#orion">Orion 4Sight Sunglasses</a></li>
 					<li><a href="#aeropress">Aeropress Cafe</a></li>
 					<li><a href="#mammachia">Mamma Chia</a></li>
-					<li><a href="#readyplayerone"><u>Ready Player One</u> by Ernest Cline</a></li>
+					<li><a href="#readyplayerone">Ready Player One</li>
 				</ul>
 			</nav>
 		</header>
@@ -35,7 +35,7 @@
 				<section>
 					<a name="panteras"></a>
 					<h2>Pantera's Pizza</h2>
-					<p class ="badcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
 					<figure>
 						<img src="images/panteraspizza.jpg" alt="Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me" />
 						<figcaption>Pantera's Pizza may not be the absolutely best pizza, but it nostalgic for me</figcaption>
